# persona-harness

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
src/: daemon.rs  error.rs  harness.rs  harness_actor.rs  lib.rs  main.rs  supervision.rs  terminal.rs  transcript.rs
tests/: actor_runtime_truth.rs  daemon.rs  smoke.rs
